@@ -31,6 +31,8 @@ Version 1.5.0 ??? (CVS)
 - Fixed reading Mills.mif (TABPoint::ReadGeometryFromMIFFFile()), the check
   for SYMBOL didn't check if pszLine was non-NULL.
 
+- Fixed memory leak of m_pszDelimiter in mitab_middatafile.cpp.
+
 
 Version 1.5.0-beta1 (2005-10-07)
 --------------------------------
@@ -694,5 +696,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.154 2006-01-27 13:44:44 fwarmerdam Exp $
+$Id: HISTORY.TXT,v 1.155 2006-01-27 13:54:06 fwarmerdam Exp $
 ------------
